syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "TodoApp";
option objc_class_prefix = "HLW";

package com.example;

service TodoAppService {
  rpc createTodo (TodoItem) returns (TodoItem) {}
  rpc readTodos (noParam) returns (TodoItems) {}
  rpc readTodoStream (noParam) returns (stream TodoItem) {}
  rpc readTodoBiStream (stream calculateRequest) returns (stream calculateResponse) {}
}

message noParam{}

message TodoItem {
  int32 id = 1;
  string task = 2;
}

message TodoItems {
  repeated TodoItem items = 1;
}

message calculateRequest {
   int32 num1 = 1;
   int32 num2 = 2;
   string operator = 3;
}
message calculateResponse {
  int32 num = 1;
}